Fixed overlapping classblocks + add classblocks with button
Classblocks now correctly position themselves on the page and do not overlap. You can now add a classblock to the page by clicking on the "+" button.

--- a/gui.css
+++ b/gui.css
@@ -1,40 +1,53 @@
 body{
-	border: 10px;
-	width: 1000px;
-	height: 1000px;
+	width: 100vh;
+	height: 100vh;
 	margin: 0;
 }
+
+#page{
+	width: 1200px;
+	height: 1200px;
+}
+
 
 .classblock{
 	width: 150px;
 	height: 250px; 
+	margin: 10px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: black;
 	text-align: center;
+	position: relative;
+	display: inline-block;
 }
 
 #FirstClass{
-	background-color: magenta;
-}
-
-#thing2{
 	background-color: yellow;
-	margin-left: auto;
-	margin-right: auto;
+	position: relative;
 }
 
 #toolbar{
-	border-right: 2px;
+	border-right: 2px;	
 	height: 100%;
 	width: 50px;
 	background-color: turquoise;
+	margin: 0px;
+	margin-right: 10px;
+	float: left;
 }
 
 #button{
 	height: 50px;
 	Width: 90%;
 	margin: 5%;
-	border: 10px solid coral;
+
+}
+
+#blockArea{
+	width: 1100px;
+	height: 1200px;
+	float: left;
+	background-color: salmon;
 
 }
